--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,8 @@
         <item name="colorControlHighlight">@color/colorPrimaryDark</item><!--覆盖色，按下的颜色  -->
     </style>
 
+    <style name="AppTheme.Immersive" parent="AppTheme.NoActionBar" />
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -37,4 +39,13 @@
         <!--窗口全屏-->
         <item name="android:windowFullscreen">true</item>
     </style>
+
+    <style name="ToolbarTitle" parent="@style/TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">@dimen/text_navi</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
